# GORGO

./: .gitignore  Makefile  README.md  app.py  data_index.md  formatting_instructions.tex  loadsweep_status.md  paper.md  previous_feedback.md  previous_paper_results.md  pyproject.toml  reward_hacking.md  writing.md
.githooks/: pre-commit
configs/: example_colocated_potent_sweep.yaml  example_pd_potent_run.yaml  example_pd_potent_sweep.yaml  example_pd_run.yaml  example_pd_sweep.yaml  example_run.yaml  example_sweep.yaml  gorgo_comparison_sharegpt.yaml  gorgo_comparison_synthetic.yaml  gorgo_hyperparam_grid.yaml  gorgo_run_sharegpt.yaml  gorgo_run_synthetic.yaml  smoke_fairness_session_modal.yaml  smoke_load_balancing_modal.yaml  smoke_pd_modal.yaml  smoke_prefix_aware_modal.yaml
data_processing/: OVERLAP_ANALYSIS_README.md  analyze_overlap_structure.py  analyze_user_reuse.py  block_reuse_public.py  build_decoded_trace.py  build_eval_dataset.py  build_hf_prefix_trie.py  build_lmsys_prefix_trie.py  build_mooncake_trace.py  build_prefix_trie.py  build_synthetic_trace.py  build_week_release.py  download_db.py  download_hf_dataset.py  dump_sample_requests.py  export_metadata_trace.py  extract_eval_metrics.py  find_best_window.py  load_completions.py  measure_system_prompt_reuse.py  overlap_metrics.py  query_wildchat_duplicate_conversations.py  requirements-overlap.txt  run_overlap.sh  sweep_mooncake_traces.py  upload_to_hf.py  week_reuse_stats.py  window_diversity_stats.py  window_replay_stats.py  window_turn_stats.py
docs/: calibration_plan.md  config_reference.md  engine_load_signal_audit.md  harness_overview.md  hotspot_labeling.md  how_to_add_a_dataset.md  how_to_add_a_policy.md  modal_quickstart.md  peer_review_v1.md  preble_paper_vs_impl.md
engine/: modal_sglang.py
experiment_runner/: BENCHMARK_PLAN.md  policy_matrix_app.py  sequencer.py
(+633 files in other folders)
