[project]
name = "GORGO"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "PyYAML>=6.0",
    "guidellm>=0.6.0",
    "modal>=1.4.0",
    "uvicorn>=0.44.0",
]

[project.optional-dependencies]
tokenizers = [
    "tiktoken>=0.7",
]

[project.scripts]
routing-harness = "routing_harness.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["engine", "src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]

[tool.ruff.format]
quote-style = "double"
