[project]
name = "GORGO"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "duckdb>=1.5.2",
    "guidellm>=0.6.0",
    "httpx>=0.28.1",
    "matplotlib>=3.9.0",
    "modal>=1.4.0",
    "numpy>=2.4.4",
    "seaborn>=0.13.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["engine"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]

[tool.ruff.format]
quote-style = "double"
